--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 
 <head>
     <link type="text/css" rel="stylesheet" href="login.css">
-    
+
 </head>
 
 <body>
@@ -33,6 +33,40 @@
           </form>
         </div>
       </div>
+
+      <!-- Google Login -->
+      <script src="https://apis.google.com/js/platform.js" async defer></script>
+      <meta name="google-signin-client_id" content="http://571663827648-g74hpmgg4iailsms70sn5cj2775vta3j.apps.googleusercontent.com/.apps.googleusercontent.com">
+
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+      <a href="#" onclick="onSignIn();">Sign in</a>
+      <script>
+      function onSignIn(googleUser) {
+          // Useful data for your client-side scripts:
+          var profile = googleUser.getBasicProfile();
+          console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+          console.log('Full Name: ' + profile.getName());
+          console.log('Given Name: ' + profile.getGivenName());
+          console.log('Family Name: ' + profile.getFamilyName());
+          console.log("Image URL: " + profile.getImageUrl());
+          console.log("Email: " + profile.getEmail());
+
+          // The ID token you need to pass to your backend:
+          var id_token = googleUser.getAuthResponse().id_token;
+          console.log("ID Token: " + id_token);
+        }
+      </script>
+
+      <a href="#" onclick="signOut();">Sign out</a>
+      <script>
+        function signOut() {
+          var auth2 = gapi.auth2.getAuthInstance();
+          auth2.signOut().then(function () {
+            console.log('User signed out.');
+          });
+        }
+      </script>
+
 </body>
 
 <script src="login.js"></script>
