--- a/login.html
+++ b/login.html
@@ -30,16 +30,14 @@
 
             <!-- Display user profile data -->
             <div id="userData"></div>
-          </form>
-        </div>
-      </div>
+
 
       <!-- Google Login -->
       <script src="https://apis.google.com/js/platform.js" async defer></script>
       <meta name="google-signin-client_id" content="http://571663827648-g74hpmgg4iailsms70sn5cj2775vta3j.apps.googleusercontent.com/.apps.googleusercontent.com">
 
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
-      <a href="#" onclick="onSignIn();">Sign in</a>
+      <a href="#" onclick="onSignIn();"><button>Sign in</button></a>
       <script>
       function onSignIn(googleUser) {
           // Useful data for your client-side scripts:
@@ -56,17 +54,9 @@
           console.log("ID Token: " + id_token);
         }
       </script>
-
-      <a href="#" onclick="signOut();">Sign out</a>
-      <script>
-        function signOut() {
-          var auth2 = gapi.auth2.getAuthInstance();
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-          });
-        }
-      </script>
-
+        </form>
+        </div>
+      </div>
 </body>
 
 <script src="login.js"></script>
