--- a/login_backup.html
+++ b/login_backup.html
@@ -2,10 +2,13 @@
 
 <head>
     <link type="text/css" rel="stylesheet" href="login.css">
-    <script src="login.js"></script>
 </head>
 
 <body>
+
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
+
     <div class="login-page">
         <label>Login</label>
         <div class="form">
@@ -22,11 +25,18 @@
             <button>login</button>
             <p class="message">Not registered? <a href="#">Create an account</a></p></form><br><br>
 
+            <!-- Display login status -->
+            <div id="status"></div>
+
             <!-- Facebook login or logout button -->
             <a href="javascript:void(0);" onclick="fbLogin()" id="fbLink"><img src="fblogin.png"/></a>
 
+            <!-- Display user profile data -->
+            <div id="userData"></div>
           </form>
         </div>
       </div>
 </body>
+
+<script src="login.js"></script>
 </html>
