--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             <p class="message">Not registered? <a href="#">Create an account</a></p></form><br><br>
 
             <!-- Facebook login or logout button -->
-            <a href="javascript:void(0);" onclick="FBLogin()" id="fbLink"><img src="fblogin.png"/></a>
+            <a href="#" onclick="FBLogin()" id="fbLink"><img src="fblogin.png"/></a>
 
            
 
