--- a/login.html
+++ b/login.html
@@ -52,5 +52,11 @@
         </form>
         </div>
       </div>
+
+      <!-- Display login status -->
+      <div id="status"></div>
+
+      <!-- Display user profile data -->
+      <div id="userData"></div>
 </body>
 </html>
