--- a/login.html
+++ b/login.html
@@ -1,63 +1,25 @@
 <!DOCTYPE html>
-
+<html>
 <head>
-    <link type="text/css" rel="stylesheet" href="login.css">
-
+    <meta charset="utf-8" />
+    <meta name="google-signin-client_id" content="http://28979034330-mknrmbjheo0aq7tjprbod9j2ukv5qe5b.apps.googleusercontent.com/.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <title>Login</title>
 </head>
-
 <body>
-    <div class="login-page">
-        <label>Login</label>
-        <div class="form">
-          <form class="register-form">
-            <input type="text" placeholder="name"/>
-            <input type="password" placeholder="password"/>
-            <input type="text" placeholder="email address"/>
-            <button>create</button>
-            <p class="message">Already registered? <a href="#">Sign In</a></p>
-          </form>
-          <form class="login-form">
-            <label>Username<input type="text"/></label>
-            <label>Password<input type="password"/></label>
-            <button>login</button>
-            <p class="message">Not registered? <a href="#">Create an account</a></p></form><br><br>
+        <!-- Google Login -->
+        <div id = "profileinfo"></div>
+        <div class="g-signin2" data-onsuccess="onSignIn"><button>Sign In</button></div>
 
-            <!-- Display login status -->
-            <div id="status"></div>
-
-            <!-- Facebook login or logout button -->
-            <a href="javascript:void(0);" onclick="fbLogin()" id="fbLink"><img src="fblogin.png"/></a>
-
-            <!-- Display user profile data -->
-            <div id="userData"></div>
-
-
-      <!-- Google Login -->
-      <script src="https://apis.google.com/js/platform.js" async defer></script>
-      <meta name="google-signin-client_id" content="http://571663827648-g74hpmgg4iailsms70sn5cj2775vta3j.apps.googleusercontent.com/.apps.googleusercontent.com">
-
-      <div class="g-signin2" data-onsuccess="onSignIn"></div>
-      <a href="#" onclick="onSignIn();"><button>Sign in</button></a>
-      <script>
-      function onSignIn(googleUser) {
-          // Useful data for your client-side scripts:
-          var profile = googleUser.getBasicProfile();
-          console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-          console.log('Full Name: ' + profile.getName());
-          console.log('Given Name: ' + profile.getGivenName());
-          console.log('Family Name: ' + profile.getFamilyName());
-          console.log("Image URL: " + profile.getImageUrl());
-          console.log("Email: " + profile.getEmail());
-
-          // The ID token you need to pass to your backend:
-          var id_token = googleUser.getAuthResponse().id_token;
-          console.log("ID Token: " + id_token);
-        }
-      </script>
-        </form>
-        </div>
-      </div>
+        <script>
+          function onSignIn(googleUser) {
+            // Useful data for your client-side scripts:
+            var profile = googleUser.getBasicProfile();
+            document.getElementById('profileinfo').innerHTML = profile.getName() + "<br>"
+            + "<a href='mailto:'" + profile.getEmail() + "'>" + profile.getEmail() + "</a>" + "<br>"
+            + "<img src='" + profile.getImageUrl() + "'/>";
+          }
+        </script>
 </body>
 
-<script src="login.js"></script>
 </html>
