--- a/login_backup.html
+++ b/login_backup.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 
 <head>
-    <link type="text/css" rel="stylesheet" href="login.css">
+    <!--<link type="text/css" rel="stylesheet" href="login.css">-->
+    <script src="login.js"></script>
 </head>
 
 <body>
-
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
-
     <div class="login-page">
         <label>Login</label>
         <div class="form">
@@ -29,14 +26,36 @@
             <div id="status"></div>
 
             <!-- Facebook login or logout button -->
-            <a href="javascript:void(0);" onclick="fbLogin()" id="fbLink"><img src="fblogin.png"/></a>
+            <a href="#" onclick="FBLogin()" id="fbLink"><img src="fblogin.png"/></a>
 
             <!-- Display user profile data -->
             <div id="userData"></div>
-          </form>
+
+
+            <!-- Google Login -->
+            <script src="https://apis.google.com/js/platform.js" async defer></script>
+            <meta name="google-signin-client_id" content="http://571663827648-g74hpmgg4iailsms70sn5cj2775vta3j.apps.googleusercontent.com/.apps.googleusercontent.com">
+
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <a href="#" onclick="onSignIn();"><button>Sign in</button></a>
+            <script>
+            function onSignIn(googleUser) {
+                // Useful data for your client-side scripts:
+                var profile = googleUser.getBasicProfile();
+                console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+                console.log('Full Name: ' + profile.getName());
+                console.log('Given Name: ' + profile.getGivenName());
+                console.log('Family Name: ' + profile.getFamilyName());
+                console.log("Image URL: " + profile.getImageUrl());
+                console.log("Email: " + profile.getEmail());
+
+                // The ID token you need to pass to your backend:
+                var id_token = googleUser.getAuthResponse().id_token;
+                console.log("ID Token: " + id_token);
+              }
+            </script>
+        </form>
         </div>
       </div>
 </body>
-
-<script src="login.js"></script>
 </html>
