--- a/login.html
+++ b/login.html
@@ -3,6 +3,9 @@
 <head>
     <!--<link type="text/css" rel="stylesheet" href="login.css">-->
     <script src="login.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="28979034330-ovjvrnlclr637g4chd5rshmrdv2k8ssl.apps.googleusercontent.com">
+
 </head>
 
 <body>
@@ -33,11 +36,9 @@
 
 
             <!-- Google Login -->
-            <script src="https://apis.google.com/js/platform.js" async defer></script>
-            <meta name="google-signin-client_id" content="http://571663827648-g74hpmgg4iailsms70sn5cj2775vta3j.apps.googleusercontent.com/.apps.googleusercontent.com">
 
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
-            <a href="#" onclick="onSignIn();"><button>Sign in</button></a>
+            <a href="#" onclick="onSignIn();"></a>
             <script>
             function onSignIn(googleUser) {
                 // Useful data for your client-side scripts:
@@ -53,10 +54,19 @@
                 var id_token = googleUser.getAuthResponse().id_token;
                 console.log("ID Token: " + id_token);
               }
-            </script>
+              </script>
+
+              <a href="#" onclick="signOut();">Sign out</a>
+                <script>
+                  function signOut() {
+                    var auth2 = gapi.auth2.getAuthInstance();
+                    auth2.signOut().then(function () {
+                      console.log('User signed out.');
+                    });
+                  }
+                </script>
         </form>
         </div>
       </div>
 </body>
 </html>
-
