--- a/login.html
+++ b/login.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 
 <head>
-    <!--<link type="text/css" rel="stylesheet" href="login.css">-->
+    <link type="text/css" rel="stylesheet" href="login.css">
     <script src="login.js"></script>
+    <script src="bg.js"></script>
+    <script src="D:\Documents\ParticlesJS\particles.js-master\dist\particles.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id" content="28979034330-ovjvrnlclr637g4chd5rshmrdv2k8ssl.apps.googleusercontent.com">
 
 </head>
 
 <body>
+
+<div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
+	<a href="https://codepen-api-export-production.s3.us-west-2.amazonaws.com/zip/PEN/pyBNzX/1578778289271/pure-css-gradient-background-animation.zip" class="d-block btn btn-outline-light" download></a>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
+
+
     <div class="login-page">
         <label>Login</label>
         <div class="form">
