--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 
 <head>
     <!--<link type="text/css" rel="stylesheet" href="login.css">-->
-    <script src="login.js"></script>
+    <script src="login-1.js"></script>
 </head>
 
 <body>
